AgendaMedico Refactor